Add parser version info plumbing and /info endpoint
